# ECO2Edit

./: .gitignore  README.md  pyproject.toml
config/: CarbonReduction-NonResidential.csv  ZebRoadmapVarRange.json  pim.toml
config/carbon-reduction/: residential.csv
scripts/: carbon_reduction.py  zeb_roadmap.py
src/eco2edit/: console.py  editor.py  report.py  tqdmr.py  zeb_roadmap.py
src/scripts/: carbon_reduction.py
src/scripts/pim/: __init__.py  base.py  condition1_basic.py  condition1_renewable.py
