[project]
name = "ECO2Edit"
version = "0.1.0"
description = "ECO2 File Edit"
authors = [{ name = "beskep", email = "beskep@naver.com" }]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "eco2 @ git+https://github.com/beskep/ECO2",
    "more-itertools>=10.6.0",
    "pydash>=8.0.5",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.15.0", "pylint>=3.3.6", "ruff>=0.11.5", "types-lxml>=2025.3.30"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eco2edit"]

[tool.ruff]
preview = true
output-format = "concise"

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",  # flake8-annotations
    "COM",  # flake8-commas
    "CPY",  # flake8-copyright
    "D1",   # pydocstyle: D1*
    "FIX",  # flake8-fixme
    "Q",    # flake8-quotes
    "S101", # flake8-bandit: assert
    "TD",   # flake8-todos
]
extend-safe-fixes = [
    "EM", # flake8-errmsg
    "TC", # flake8-type-checking
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
disable_error_code = ["import-untyped", "import", "var-annotated"]
check_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true
